# backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  meter.toml.example  pyproject.toml
.github/workflows/: ci.yml
celery/: tasks.py
crawler/: README.md  crawl.py
crawler/crawler/: crawler.py  dam.py  eq.py  power.py
crawler/example/: dam.json  eq.json  power.json
crawler/model/: __init__.py
meter/: helper.py  main.py
meter/api/: __init__.py  alert_rule.py  auth.py  comment.py  config.py  cors.py  crawler.py  group.py  issue.py  metrics.py  report.py  rule.py  upload.py  user.py
meter/config/: __init__.py
meter/constant/: __init__.py  dam_chinese_name.py  issue_status.py  message.py  response_code.py  rule_operator.py  rule_position.py  rule_resource.py  template_path.py
meter/domain/: __init__.py  auth.py  crawler.py  issue.py  report.py  rule.py  smtp.py  user.py
meter/exception/: __init__.py  exception.py
meter/job/: trigger_rule.py
meter/template/: automated_generate_issue_content.template  automated_generate_issue_title.template
telery/: __init__.py  celeryconfig.py  celeryconfig.py.example  crawler_tasks.py  dbconfig.py.example  rule_tasks.py  save_tasks.py  submitter.py
template/: verify_mail.template
tests/: conftest.py  helper.py  test_helper.py
tests/api/: test_cors.py  test_crawler.py  test_issue.py  test_report.py  test_rule.py  test_user.py
tests/domain/: test_issue_domain.py  test_rule_domain.py
